Change sizing for privacyPolicyGeneratorContainer to be more mobile friendly with max-widths and margin: auto; Add new line to the end of all files in app; Add app.css to generated policy print page; Remove readonly attribute from md-chips; Add blank placeholder to phone number input to avoid letting the mask and the label overlap when unfocused and empty; Add nav buttons for mobile version using md-icons and change layout where neccesary; Allow swipe actions on md-chips; Change disclaimer css to be mobile friendly;

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,7 @@
+privacy-policy-generator * {
+    box-sizing: border-box;
+}
+
 .unisyn-hint {
     margin-top: 6px;
     font-size: 14px;
@@ -45,7 +49,9 @@ md-input-container .md-errors-spacer {
 }
 
 .privacyPolicyGeneratorContainer {
-    width: 900px;
+    width: 100%;
+    max-width: 900px;
+    margin: auto;
 }
 
 .legalDisclaimerDialogContainer {
@@ -57,6 +63,13 @@ md-input-container .md-errors-spacer {
     right: 0;
     bottom: 0;
     left: 0;
+    overflow: auto;
+}
+
+.legalDisclaimerDialogContainer * {
+    width: 100%;
+    max-width: 900px;
+    margin: auto;
 }
 
 .generatedPolicyContainer {
@@ -162,4 +175,3 @@ md-input-container .md-errors-spacer {
 		margin-right: 16px;
 	}
 }
-
